# coppelia-ros2-dnf

./: .bash_history  .gitconfig  .gitignore  .python_history  LICENSE  README.md
.CoppeliaSim/: usrset.txt
.CoppeliaSim/autoSavedScenes/2025-11-28-10-42-B7D5C21F0B00BD71/: 2-CEB3FAC7DB4CDAD0.ttt
.CoppeliaSim/autoSavedScenes/2025-11-28-13-04-CDE312DC393B4871/: 2-CEB3FAC7DB4CDAD0.ttt
.CoppeliaSim/autoSavedScenes/2025-11-28-15-46-E9DBBE7A21059AEA/: 2-CEB3FAC7DB4CDAD0.ttt
.cache/Microsoft/DeveloperTools/: deviceid
.cache/mesa_shader_cache/: index
.config/: QtProject.conf
.gnupg/: pubring.kbx  trustdb.gpg
.ssh/: known_hosts
coppelia/lua/: learning_bill.lua  learning_franka.lua  recall_bill.lua  recall_franka.lua
coppelia/scenes/: dnf_learning_scene.ttt  dnf_recall_scene.ttt  project_test.ttt
project/docker/: Dockerfile  entrypoint.sh
ros2_ws/install/: setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/: ros2_interface  src
ros2_ws/src/coppelia_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/dnf_system/: package.xml  setup.cfg  setup.py
ros2_ws/src/dnf_system/dnf_system/: cube_input_node.py  cube_tracker_node copy 2.py  dnf_recall_node.py
ros2_ws/src/dnf_system/launch/: dnf_learn.launch.py  dnf_recall.launch.py  dnf_sim.launch copy.py
ros2_ws/src/dnf_tracker/: package.xml  setup.cfg  setup.py
ros2_ws/src/dnf_tracker/dnf_tracker/: cube_tracker_node copy.py  cube_tracker_node.py  dnf_learning_node.py  dnf_recall_node.py  wip.py
ros2_ws/src/dnf_tracker/launch/: dnf_recall.launch.py  dnf_sim.launch copy.py  tracker_with_bridge.launch.py
(+19 files in other folders)
