<?xml version="1.0"?>
<package format="3">
  <name>dnf_system</name>
  <version>0.0.1</version>
  <description>Dynamic Neural Field (DNF) implementation in Python and ROS 2</description>
  <maintainer email="weronika.wojtak@ccg.pt">Weronika Wojtak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
