<?xml version="1.0"?>
<package format="3">
  <name>dnf_tracker</name>
  <version>0.0.1</version>
  <description>DNF cube tracker</description>
  <maintainer email="you@example.com">Weronika</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
